# simple-python-prometheus-application

./: README.md  pyproject.toml
