[tool.poetry]
name = "simple-python-prometheus-application"
version = "0.1.0"
description = "A simple python application that exposes metrics using the prometheus python client"
authors = ["hari-mani <hariatul1998@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
